WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239390
RenderLayer::move parent mismatch
https://bugs.webkit.org/show_bug.cgi?id=239390
Summary
RenderLayer::move parent mismatch
Brandon
Reported
2022-04-15 09:52:12 PDT
<
rdar://91519558
>
Attachments
Patch
(3.51 KB, patch)
2022-04-15 09:59 PDT
,
Brandon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brandon
Comment 1
2022-04-15 09:59:36 PDT
Created
attachment 457705
[details]
Patch
Wenson Hsieh
Comment 2
2022-04-15 10:06:41 PDT
Comment on
attachment 457705
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=457705&action=review
> Source/WebCore/ChangeLog:3 > + Parent Mismatch
Perhaps this title could be a bit more descriptive?
Brandon
Comment 3
2022-04-15 10:12:11 PDT
Committed
r292911
(?): <
https://commits.webkit.org/r292911
>
Darin Adler
Comment 4
2022-04-19 13:32:34 PDT
Comment on
attachment 457705
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=457705&action=review
>> Source/WebCore/ChangeLog:3 >> + Parent Mismatch > > Perhaps this title could be a bit more descriptive?
Simplify layer parent handling for better robustness
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug