Parent Mismatch https://bugs.webkit.org/show_bug.cgi?id=239390

Reviewed by Simon Fraser.

The oldParent and layer->parent() may be different under certain circumstances.
To account for this, we can just use the layer->parent() and remove the use
of oldParent. This also has the benefit of simplifying the moveLayers() function.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::moveLayers):
* rendering/RenderElement.h:
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::insertOnlyThisLayer):

Canonical link: https://commits.webkit.org/249681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292911 268f45cc-cd09-0410-ab3c-d52691b4dbfc